[package]
name = "pay-engine"
version = "0.1.0"
edition = "2021"
default-run = "runner"

[lib]
name = "pay_engine"
path = "src/engine.rs"

[[bin]]
name = "runner"
path = "src/runner.rs"

[dependencies]
csv = "1.1"
serde = { version = "1", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"
tokio-util = { version = "0.7", features = ["full"] }
